@@ -1,3 +1,12 @@
+2009-04-21  Roland McGrath  <roland@redhat.com>
+
+	* dwfl_module_getsym.c: Apply non-ET_REL bias only if SHF_ALLOC.
+
+	* relocate.c (__libdwfl_relocate_value): Assert that MOD is ET_REL.
+	* derelocate.c (cache_sections): Call __libdwfl_relocate_value only
+	for ET_REL.
+	* dwfl_module_build_id.c (__libdwfl_find_build_id): Likewise.
+
 2009-04-20  Roland McGrath  <roland@redhat.com>
 
 	* dwfl_module_getdwarf.c (__libdwfl_getelf): Add internal_function.
